// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsCard should render 1`] = `
<DocumentFragment>
  <div
    data-testid="NewsCard"
  >
    <div
      class="relative h-full w-full cursor-default border-b border-theme-primary-100 bg-theme-background p-3 text-left transition-colors-shadow duration-200 dark:border-theme-secondary-800 md:rounded-lg md:border-2 md:border-b-2 md:p-5"
    >
      <div
        class="flex flex-col space-y-6 bg-theme-background p-5"
      >
        <div
          class="flex w-full justify-between"
        >
          <div
            class="flex items-center"
          >
            <div
              class="flex items-center md:hidden"
            >
              <div
                aria-label="ARK"
                class="inline-flex h-5 w-5 items-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="css-1i4b0eq"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="hidden md:block"
            >
              <div
                aria-label="ARK"
                class="text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background duration-100 css-aozgpb"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="css-1i4b0eq"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="ml-4 flex items-center space-x-2 md:flex-col md:items-start md:space-x-0"
            >
              <h4
                class="text-lg font-semibold"
                data-testid="NewsCard__asset-ARK"
              >
                ARK
              </h4>
              <div
                class="flex md:hidden"
              >
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
                  type="vertical"
                />
              </div>
              <div
                class="flex items-center space-x-2"
              >
                <p
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="NewsCard__date-created"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </p>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col justify-end"
          >
            <div
              class="css-dxblop"
              color="warning"
            >
              <span
                class="mx-1 text-sm"
                data-testid="NewsCard__category"
              >
                #Technical
              </span>
            </div>
          </div>
        </div>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-12qg4ub"
          type="horizontal"
        />
        <div
          class="whitespace-pre-line text-theme-secondary-text"
          data-testid="NewsCard__content"
        >
          Recently we released our all-in-one toolkit the ARK Platform SDK, along with an overview and what blockchain projects it will initially support. Today we are going into more details on a technical level. 
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewsCard should render with cover image 1`] = `
<DocumentFragment>
  <div
    data-testid="NewsCard"
  >
    <div
      class="relative h-full w-full cursor-default border-b border-theme-primary-100 bg-theme-background p-3 text-left transition-colors-shadow duration-200 dark:border-theme-secondary-800 md:rounded-lg md:border-2 md:border-b-2 md:p-5"
    >
      <div
        class="flex flex-col space-y-6 bg-theme-background p-5"
      >
        <div
          class="flex w-full justify-between"
        >
          <div
            class="flex items-center"
          >
            <div
              class="flex items-center md:hidden"
            >
              <div
                aria-label="ARK"
                class="inline-flex h-5 w-5 items-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="css-1i4b0eq"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="hidden md:block"
            >
              <div
                aria-label="ARK"
                class="text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background duration-100 css-aozgpb"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="css-1i4b0eq"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="ml-4 flex items-center space-x-2 md:flex-col md:items-start md:space-x-0"
            >
              <h4
                class="text-lg font-semibold"
                data-testid="NewsCard__asset-ARK"
              >
                ARK
              </h4>
              <div
                class="flex md:hidden"
              >
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
                  type="vertical"
                />
              </div>
              <div
                class="flex items-center space-x-2"
              >
                <p
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="NewsCard__date-created"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </p>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col justify-end"
          >
            <div
              class="css-dxblop"
              color="warning"
            >
              <span
                class="mx-1 text-sm"
                data-testid="NewsCard__category"
              >
                #Marketing
              </span>
            </div>
          </div>
        </div>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-12qg4ub"
          type="horizontal"
        />
        <div
          class="whitespace-pre-line text-theme-secondary-text"
          data-testid="NewsCard__content"
        >
          June is over and it's time for the Monthly Update. This blog post will cover last month’s highlights, activities, development, partner activities, news and updates of our upcoming releases. 
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://blog.ark.io/ark-monthly-update-june-2020-edition-279a3dd47a36"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              https://blog.ark.io/ark-monthly-update-june-2020-edition-279a3dd47a36
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </div>
        <div
          class="-mx-10 flex justify-center border-t-2 border-theme-primary-100 p-1 dark:border-theme-secondary-800"
        >
          <img
            alt="Payvo Banner"
            src="https://via.placeholder.com/150"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
